intel/bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/log.txt
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:25:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:27:13: warning: cast to 'void *' from smaller integer type 'unichar' (aka 'int') [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)ubuf[i];
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:30:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:32:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] >> 6) + 0xc0);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:33:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:36:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:38:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] >> 12) + 0xe0);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:39:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 6) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:40:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:43:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:45:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] >> 18) + 0xf0);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:46:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 12) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:47:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >>  6) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:48:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:51:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:53:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] >> 24) + 0xf8);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:54:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 18) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:55:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 12) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:56:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >>  6) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:57:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:60:12: error: use of undeclared identifier 'NULL'
                                return NULL;
                                       ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:62:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] >> 30) + 0xfc);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:63:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 24) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:64:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 18) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:65:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >> 12) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:66:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)(((ubuf[i] >>  6) & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:67:13: warning: cast to 'void *' from smaller integer type 'int' [-Wint-to-void-pointer-cast]
                        *buf++ = (ut8)((ubuf[i] & 0x3f) + 0x80);
                                 ^
bench_214_new/extr_.radare2librmagicascmagic.c_encode_utf8_with_main/extr_.radare2librmagicascmagic.c_encode_utf8_with_main.c:69:11: error: use of undeclared identifier 'NULL'
                        return NULL;
                               ^
21 warnings and 7 errors generated.
HLS FPGA Parse FAILED.
